test/corpus/strings.txt
================================================================================
Single quoted string
================================================================================

s1 = 'hello world'

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (string_literal)))

================================================================================
Double quoted string
================================================================================

s2 = "hello world"

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (string_literal)))

================================================================================
Empty string
================================================================================

s3 = ''

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (string_literal)))

================================================================================
String with escaped quote
================================================================================

s4 = 'it''s a test'

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (string_literal)))
